--- a/generator-tekton/generators/app/templates/kaniko/triggers/01-secrets.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/01-secrets.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: git-sshkey-secret
-  namespace: <%= pipelineName %>-namespace
+  namespace: <%= namespaceName %>
 data:
  id_rsa: <%= deployKey %>
  config: <%= sshConfig %>
@@ -13,6 +13,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: docker-credentials
-  namespace: <%= pipelineName %>-namespace
+  namespace: <%= namespaceName %>
 data:
   config.json: <%= dockerConfig %>
