--- a/generator-tekton/generators/app/templates/jib/triggers/05-triggers.yml
+++ b/generator-tekton/generators/app/templates/jib/triggers/05-triggers.yml
@@ -2,7 +2,7 @@ apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerBinding
 metadata:
   name: <%= pipelineName %>-trigger-binding 
-  namespace: <%= pipelineName %>-namespace
+  namespace: <%= namespaceName %>
 spec:
   params:
   - name: revision
@@ -12,7 +12,7 @@ spec:
   - name: submodules
     value: "false"
   - name: image-reference
-    value: <%= imageURL %>
+    value: <%= imageRepositoryURL %>
   - name: maven-image-reference
     value: lokeshkarakala/custom-dev-image
   
@@ -22,7 +22,7 @@ apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
   name: <%= pipelineName %>-trigger-template
-  namespace: <%= pipelineName %>-namespace
+  namespace: <%= namespaceName %>
 spec:
   params:
   - name: revision
@@ -37,7 +37,7 @@ spec:
     kind: PipelineRun
     metadata:
       generateName: <%= pipelineName %>-run-
-      namespace: <%= pipelineName %>-namespace
+      namespace: <%= namespaceName %>
     spec:
       serviceAccountName: <%= pipelineName %>-service-account
       pipelineRef:
