--- a/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipelinerun.yml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   generateName: <%= pipelineName %>-run-
-  namespace: <%= pipelineName %>-namespace
+  namespace: <%= namespaceName %>
 spec:
   serviceAccountName: <%= pipelineName %>-service-account
   pipelineRef:
@@ -39,4 +39,4 @@ spec:
   - name: dockerfile
     value: <%= PathtoDockerfile %>
   - name: image-reference
-    value: <%= imageURL %>
+    value: <%= imageRepositoryURL %>
