--- a/generator-tekton/generators/app/templates/kaniko/triggers/04-event-listener.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/04-event-listener.yml
@@ -2,7 +2,7 @@ apiVersion: triggers.tekton.dev/v1beta1
 kind: EventListener
 metadata:
   name: <%= pipelineName %>-eventlistener
-  namespace: <%= pipelineName %>-namespace
+  namespace: <%= namespaceName %>
 spec:
   resources:
     kubernetesResource:
