--- a/generator-tekton/generators/app/templates/kaniko/pipeline/01-secrets.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/01-secrets.yml
@@ -1,3 +1,4 @@
+<%_ if (repoType == "private") { _%>
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,7 +7,7 @@ metadata:
 data:
   id_rsa: <%= deployKey %>
   config: <%= sshConfig %>
-
+<%_ } _%>
 ---
 
 apiVersion: v1
