--- a/generator-tekton/generators/app/templates/jib/pipeline/04-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/jib/pipeline/04-pipelinerun.yml
@@ -38,3 +38,9 @@ spec:
     value: <%= imageRepositoryURL %>
   - name: maven-image-reference
     value: lokeshkarakala/custom-dev-image
+  <%_ if (PathToPomFile == "Directory") { _%>
+  - name: DIRECTORY
+    value: ./policies
+  <%_ } _%>
+   
+  
