--- a/generator-tekton/generators/app/templates/kaniko/triggers/03-pipeline.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/03-pipeline.yml
@@ -16,7 +16,7 @@ spec:
     type: string
   - name: image-reference
     type: string
-  <%_ if (DockerfilePath == "Docker") { _%>
+  <%_ if (DockerfilePath == "Dockerfile") { _%>
   - name: context
     type: string
   - name: dockerfile
@@ -58,7 +58,7 @@ spec:
     params:
     - name: IMAGE
       value: $(params.image-reference)
-    <%_ if (DockerfilePath == "Docker") { _%>
+    <%_ if (DockerfilePath == "Dockerfile") { _%>
     - name: CONTEXT
       value: $(params.context)
     - name: DOCKERFILE
