template folders modified

--- a/generator-tekton/generators/app/templates/jib/pipeline/04-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/jib/pipeline/04-pipelinerun.yml
@@ -37,9 +37,9 @@ spec:
   - name: image-reference
     value: <%= imageRepositoryURL %>
   - name: maven-image-reference
-    value: lokeshkarakala/custom-dev-image
+    value: lokeshkarakala/custom-maven-image
   <%_ if (PathToPomFile == "Directory") { _%>
-  - name: DIRECTORY
+  - name: directory
     value: ./policies
   <%_ } _%>
    
