--- a/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/04-pipelinerun.yml
@@ -34,7 +34,7 @@ spec:
     value: <%= branch %> 
   - name: submodules
     value: "false"
-  <%_ if (DockerfilePath == "Dockerfile") { _%>
+  <%_ if (DockerfilePath == "Directory") { _%>
   - name: context
     value: <%= PathtoContext %>
   - name: dockerfile
