--- a/generator-tekton/generators/app/templates/kaniko/pipeline/03-pipeline.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/03-pipeline.yml
@@ -16,7 +16,7 @@ spec:
     type: string
   - name: image-reference
     type: string
-  <%_ if (DockerfilePath == "Dockerfile") { _%>
+  <%_ if (DockerfilePath == "Directory") { _%>
   - name: context
     type: string
   - name: dockerfile
@@ -57,7 +57,7 @@ spec:
     params:
     - name: IMAGE
       value: $(params.image-reference)
-    <%_ if (DockerfilePath == "Dockerfile") { _%>
+    <%_ if (DockerfilePath == "Directory") { _%>
     - name: CONTEXT
       value: $(params.context)
     - name: DOCKERFILE
