--- a/validations/pipeline-yml-files/04-pipelinerun.yml
+++ b/validations/pipeline-yml-files/04-pipelinerun.yml
@@ -35,4 +35,4 @@ spec:
   - name: submodules
     value: "false"
   - name: image-reference
-    value: nandiniperikala/validations:latest
+    value: raxkumar/validations:latest
