--- a/generator-tekton/generators/app/templates/jib/pipeline/04-pipelinerun.yml
+++ b/generator-tekton/generators/app/templates/jib/pipeline/04-pipelinerun.yml
@@ -23,9 +23,11 @@ spec:
   - name: docker-credentials
     secret:
       secretName: docker-credentials
+  <%_ if (repoType == "private") { _%>
   - name: ssh-creds
     secret:
       secretName: git-sshkey-secret
+  <%_ } _%>
 
   params:
   - name: repo-url
