--- a/generator-tekton/generators/app/templates/kaniko/triggers/02-rbac.yml
+++ b/generator-tekton/generators/app/templates/kaniko/triggers/02-rbac.yml
@@ -4,7 +4,9 @@ metadata:
   name: <%= pipelineName %>-service-account
   namespace: <%= namespaceName %>
 secrets:
+  <%_ if (repoType == "private") { _%>
   - name: git-sshkey-secret
+  <%_ } _%>
   - name: docker-credentials
 ---
 apiVersion: rbac.authorization.k8s.io/v1
