--- a/generator-tekton/generators/app/templates/jib/triggers/05-triggers.yml
+++ b/generator-tekton/generators/app/templates/jib/triggers/05-triggers.yml
@@ -35,7 +35,9 @@ spec:
   - name: repo-url
   - name: image-reference
   - name: submodules
+  <%_ if (PathToPomFile == "Directory") { _%>
   - name: directory
+  <%_ } _%>
   
   resourcetemplates:
   - apiVersion: tekton.dev/v1beta1
