updated secret for jib

--- a/generator-tekton/generators/app/templates/jib/pipeline/01-secrets.yml
+++ b/generator-tekton/generators/app/templates/jib/pipeline/01-secrets.yml
@@ -7,13 +7,13 @@ metadata:
 data:
   id_rsa: <%= deployKey %>
   config: <%= sshConfig %>
-<%_ } _%>
 ---
-
+<%_ } _%>
 apiVersion: v1
 kind: Secret
 metadata:
   name: docker-credentials
   namespace: <%= namespaceName %>
 data:
-  config.json: <%= dockerConfig %>
+  .dockerconfigjson: <%= dockerConfig %>
+type: kubernetes.io/dockerconfigjson
