--- a/generator-tekton/generators/app/templates/jib/triggers/03-pipeline.yml
+++ b/generator-tekton/generators/app/templates/jib/triggers/03-pipeline.yml
@@ -65,4 +65,14 @@ spec:
     - name: DIRECTORY
       value: $(params.directory)
     <%_ } _%>
+  <%_ if (sonarqube == "yes") { _%>
+  - name: code-analysis
+    taskRef:
+      name: sonarqube-scanner
+    runAfter:
+      - jib-maven
+    workspaces:
+      - name: source
+        workspace: shared-data
+  <%_ } _%>
    
