--- a/generator-tekton/generators/app/templates/kaniko/pipeline/03-pipeline.yml
+++ b/generator-tekton/generators/app/templates/kaniko/pipeline/03-pipeline.yml
@@ -67,7 +67,7 @@ spec:
     - name: DOCKERFILE
       value: $(params.dockerfile)
     <%_ } _%>
-  <%_ if (sonarqube == "yes") { _%>
+  <%_ if (SonarQube == "yes") { _%>
   - name: code-analysis
     taskRef:
       name: sonarqube-scanner
